2010-10-19  Jia Pu  <jpu@apple.com>

Reviewed by Adele Peterson.

        Moving cursor back to autocorrected word in the same line shouldn't remove the underline
        https://bugs.webkit.org/show_bug.cgi?id=47629
        <rdar://problem/8546758>

        * platform/mac-leopard/Skipped: New tests don't apply to this Mac OSX version.
        * platform/mac-snowleopard/Skipped: Ditto.
        * platform/mac-tiger/Skipped: Ditto.
        * platform/mac-wk2/Skipped: Ditto.
        * platform/mac/editing/spelling/autocorrection-delete-expected.checksum:
        * platform/mac/editing/spelling/autocorrection-delete-expected.png:
        * platform/mac/editing/spelling/click-autocorrected-word-expected.checksum: Added.
        * platform/mac/editing/spelling/click-autocorrected-word-expected.png: Added.
        * platform/mac/editing/spelling/click-autocorrected-word-expected.txt: Added.
        * platform/mac/editing/spelling/click-autocorrected-word.html: Added.
        * platform/mac/editing/spelling/delete-into-autocorrected-word-expected.checksum: Added.
        * platform/mac/editing/spelling/delete-into-autocorrected-word-expected.png: Added.
        * platform/mac/editing/spelling/delete-into-autocorrected-word-expected.txt: Added.
        * platform/mac/editing/spelling/delete-into-autocorrected-word.html: Added.
        * platform/mac/editing/spelling/delete-into-misspelled-word-expected.txt: Added.
        * platform/mac/editing/spelling/delete-into-misspelled-word.html: Added.
        * platform/mac/editing/spelling/forward-delete-into-autocorrected-word-expected.checksum: Added.
        * platform/mac/editing/spelling/forward-delete-into-autocorrected-word-expected.png: Added.
        * platform/mac/editing/spelling/forward-delete-into-autocorrected-word-expected.txt: Added.
        * platform/mac/editing/spelling/forward-delete-into-autocorrected-word.html: Added.
        * platform/mac/editing/spelling/move-cursor-around-misspelled-word-expected.txt: Added.
        * platform/mac/editing/spelling/move-cursor-around-misspelled-word.html: Added.
        * platform/mac/editing/spelling/move-cursor-to-autocorrected-word-expected.checksum: Added.
        * platform/mac/editing/spelling/move-cursor-to-autocorrected-word-expected.png: Added.
        * platform/mac/editing/spelling/move-cursor-to-autocorrected-word-expected.txt: Added.
        * platform/mac/editing/spelling/move-cursor-to-autocorrected-word.html: Added.
        * platform/mac/editing/spelling/move-cursor-to-beginning-of-autocorrected-word-expected.checksum: Added.
        * platform/mac/editing/spelling/move-cursor-to-beginning-of-autocorrected-word-expected.png: Added.
        * platform/mac/editing/spelling/move-cursor-to-beginning-of-autocorrected-word-expected.txt: Added.
        * platform/mac/editing/spelling/move-cursor-to-beginning-of-autocorrected-word.html: Added.
2010-10-19  Jia Pu  <jpu@apple.com>

        Reviewed by Adele Peterson.

        Moving cursor back to autocorrected word in the same line shouldn't remove the underline
        https://bugs.webkit.org/show_bug.cgi?id=47629
        <rdar://problem/8546758>

        Tests: platform/mac/editing/spelling/click-autocorrected-word.html
               platform/mac/editing/spelling/delete-into-autocorrected-word.html
               platform/mac/editing/spelling/delete-into-misspelled-word.html
               platform/mac/editing/spelling/forward-delete-into-autocorrected-word.html
               platform/mac/editing/spelling/move-cursor-around-misspelled-word.html
               platform/mac/editing/spelling/move-cursor-to-autocorrected-word.html
               platform/mac/editing/spelling/move-cursor-to-beginning-of-autocorrected-word.html

        * editing/Editor.cpp:
        (WebCore::Editor::respondToChangedSelection): Don't remove misspelling or autocorrection
          underlines when cursor is moved onto a word.

Canonical link: https://commits.webkit.org/60633@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70071 268f45cc-cd09-0410-ab3c-d52691b4dbfc